--- a/LocationApp/settings.gradle
+++ b/LocationApp/settings.gradle
@@ -11,3 +11,6 @@ include ':app'
 include ':libs'
 include ':libs:ui'
 include ':libs:ui:navigation'
+include ':libs:location'
+include ':libs:location:api'
+include ':libs:location:rx'
