--- a/LocationApp/libs/location/rx/build.gradle
+++ b/LocationApp/libs/location/rx/build.gradle
@@ -2,6 +2,7 @@ plugins {
     id 'com.android.library'
     id 'kotlin-android'
 }
+apply from: '../../../versions.gradle'
 
 android {
     compileSdk 31
@@ -32,11 +33,15 @@ android {
 }
 
 dependencies {
+    implementation "androidx.core:core-ktx:$ktx_extension_version"
+    api project(path: ':libs:location:api')
 
-    implementation 'androidx.core:core-ktx:1.6.0'
-    implementation 'androidx.appcompat:appcompat:1.3.1'
-    implementation 'com.google.android.material:material:1.4.0'
-    testImplementation 'junit:junit:4.+'
-    androidTestImplementation 'androidx.test.ext:junit:1.1.3'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
+    // Rx Dependencies
+    api "io.reactivex.rxjava2:rxkotlin:$rxjava_kotlin_ext_version"
+    api "io.reactivex.rxjava2:rxandroid:$rx_android_lib_version"
+
+    // Testing libraries
+    testImplementation "junit:junit:$junit_version"
+    testImplementation "com.nhaarman.mockitokotlin2:mockito-kotlin:$mockito_version"
+    testImplementation "org.robolectric:robolectric:$robolectric_version"
 }
